force-app/main/default/objects/Activity/fields/Complaint__c.field-meta.xml
<CustomField>
    <fullName>Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complaint</label>
    <referenceTo>Complaint__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>