force-app/main/default/objects/Activity/fields/Document_Request__c.field-meta.xml
<CustomField>
    <fullName>Document_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Request</label>
    <referenceTo>Document_Request__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>