force-app/main/default/objects/Activity/fields/PTO_Request__c.field-meta.xml
<CustomField>
    <fullName>PTO_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PTO Request</label>
    <referenceTo>PTO_Request__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>